--- a/indeax2.html
+++ b/indeax2.html
@@ -19,8 +19,8 @@ To contact me, click on<b><em><u> Contact Me</u></em></b></p></h3>
 
 <ul>
 <li><a href="aboutMe.html">About Me</a></li><br>
-<li><a href="my work.html">My Work</a></li><br>
-<li><a href="contact me .html">Contact Me</a></li><br>
+<li><a href="myWork.html">My Work</a></li><br>
+<li><a href="contactMe.html">Contact Me</a></li><br>
 
 
 </ul>
