--- a/indeax2.html
+++ b/indeax2.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <h1>Welcome to my personal website</h1>
-<img src="Test/OIP.jfif" alt="please check the path"><br>
+<img src="OIP.jfif" alt="please check the path"><br>
 <h3>
 Hello ,Welcome to access my personal data, you can click on <b><em><u>About Me</u></em></b><br>
 To access my work, you can choose<b><em><u> My Work</u></em></b><br>
